# ship-worker

./: Cargo.toml
src/: heartbeats.rs  id_types.rs  main.rs  positions.rs
src/database/: firestore.rs
src/inventory/: crafting.rs  mod.rs  modules.rs  resources.rs  system.rs
src/modules/: cooldowns.rs  crafting.rs  mod.rs  module_inventory.rs  resource_inventory.rs  samplers.rs  scanners.rs  sensors.rs  trigger_system.rs
src/ships/: damageables.rs  exploration.rs  heartbeats.rs  identifications.rs  mod.rs  positions.rs
src/spatial_os/: connexion.rs  init.rs  mod.rs
