[package]
name = "ship-worker"
version = "1.0.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparseset = "1.0"
rand = "0.7"
rand_xoshiro = "0.4"
nalgebra = "0.21"
procedural-generation = {path = "../procedural-generation"}
sphere-points = {path = "../sphere-points"}